<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="PRESENTER" type="com.kotlin.leo.pomodoro.mvp.impl.SettingsPresenter"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/session_settings"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_session_duration" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/workSessionSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="120"
                    android:progress="@={PRESENTER.workSessionLength}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(PRESENTER.workSessionLength)}"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_session_duration"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/restSessionSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="30"
                    android:progress="@={PRESENTER.restSessionLength}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(PRESENTER.restSessionLength)}"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_session_ends"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_before_a_new_session_starts"
                android:padding="20dp"
                android:checked="@={PRESENTER.askBeforeSessionStart}"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_when_session_ends"
                android:padding="20dp"
                android:checked="@={PRESENTER.vibrateWhenSessionEnds}"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_sound_when_session_ends"
                android:padding="20dp"
                android:checked="@={PRESENTER.playSoundWhenSessionEnds}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/during_a_session"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_not_disturb_during_work_session"
                android:padding="20dp"
                android:checked="@={PRESENTER.doNotDisturbDuringWorkSession}"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keep_screen_on"
                android:padding="20dp"
                android:checked="@={PRESENTER.keepScreenOn}"/>
        </LinearLayout>
    </ScrollView>
</layout>